--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,12 @@
 .App {
   text-align: center;
 }
+.title {
+  font-size: 60px;
+}
+h1 {
+  margin: 10px 0;
+}
 ul {
   text-align: left;
   display: inline-block;
@@ -8,6 +14,7 @@ ul {
   list-style-type: none;
   background-color: black;
   min-width: 20vw;
+  margin: 10px 0;
 }
 li {
   padding: 20px;
@@ -21,6 +28,7 @@ button {
   font-size: 30px;
   color: white;
   min-width: 10vw;
+  cursor: pointer;
 }
 input {
   min-width: 10vw;
